fixed sticky flickering of navbar

--- a/src/styles/Checkout.css
+++ b/src/styles/Checkout.css
@@ -5,7 +5,7 @@
   padding-bottom: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 20px;
-  margin-top: 20px;
+  margin-top: 76px;
   min-height: 80vh;
 }
 
@@ -45,9 +45,13 @@
 .YourOrder-wrap {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .YourOrder-wrap > * {
+  margin-right: 10px;
+}
+
+.Checkout-buttons > * {
   margin-right: 10px;
 }
